Navbar no longer blocks content on mobile

--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -112,6 +112,7 @@ input[type=checkbox] {
 
 input[type=checkbox]:checked~#menu {
     display: block;
+    height: auto;
 }
 
 
@@ -119,6 +120,7 @@ input[type=checkbox]:checked~#menu {
     ul {
         position: static;
         display: none;
+        height: auto;
     }
     li {
         margin-bottom: 1px;
